complex-example-minimal-stateless-application/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ssc-cxp-demo-service
  namespace: cxp-team-heiterbiswolkig
spec:
  selector:
    app: stevens-first-kubernetes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
